manifests/example-2-circuitbreak/target.yaml
apiVersion: v1
kind: Service
metadata:
  name: circuit-break-example
  labels:
    app: circuit-break-example
    service: circuit-break-example
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8000
  selector:
    app: circuit-break-example
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circuit-break-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: circuit-break-example
  template:
    metadata:
      labels:
        app: circuit-break-example
    spec:
      containers:
      - image: choisunguk/fastapi_sleep:v2
        imagePullPolicy: IfNotPresent
        name: circuit-break-example
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /ping
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
