manifests/example-2-circuitbreak/istio_config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: circuit-break-example
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-example-nginx
spec:
  hosts:
  - "example2.com"
  gateways:
  - circuit-break-example
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        # kubernetes service name
        host: circuit-break-example
        port:
          number: 80
